Fix more layout bugs
- Main page h3 needs to be clear
- Put artist name and album name on separate lines in album view, we have
  loads of room.

--- a/static/pickup.css
+++ b/static/pickup.css
@@ -42,6 +42,10 @@ ul#trackList {
 	clear: both;
 }
 
+h3 {
+	clear: both;
+}
+
 ul#artistList li,
 ul#albumList li,
 ul#trackList li {
@@ -132,7 +136,7 @@ ul#trackList li span.track-title {
 }
 
 #albumView h2 {
-	width: 30em;
+	width: 20em;
 }
 
 #albumView h2 span {
